@startuml

title __CONTROLLER's Class Diagram__\n

  namespace Controller {
    class Controller.BindingController {
        {static} + bindText()
    }
  }
  

  namespace Controller {
    enum direction {
      BOTTOM
      LEFT
      RIGHT
      TOP
    }
  }
  

  namespace Controller {
    class Controller.EventController {
        - diffs : ObservableList<Menu>
        + EventController()
        + handleRestart()
        + handleStop()
        + moveDown()
        + moveLeft()
        + moveRight()
        + moveUp()
        + setBindings()
        + setMenus()
        - getDifficulty()
        - getGhosts()
        - reset()
    }
  }
  

  Controller.BindingController +-down- Controller.BindingController.direction
  Controller.EventController o-- Modele.ModelGrid : modelGrid
  Controller.EventController o-- Modele.SimplePacMan : spm


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
